--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Oatoatan",
   "short_name": "Oatoatan",
   "start_url": "https://oatoatan.blogspot.com/",
-  "display": "standalone",
+  "display": "browser",
   "background_color": "#fff",
   "theme_color": "#3FC7BB",
   "description": "Oatoatan mengenalkan berbagai jenis obat, sifat-sifatnya, dan cara pemakaiannya, baik untuk penyakit dalam maupun untuk penyakit luar. Walaupun demikian, rekomendasi (resep) dari ahli kesehatan (dokter) tetap diperlukan agar kita tidak salah mengkonsumsi obat.",
